# S-ker-databas

./: .gitignore  Cargo.toml  README.md  aiagent_design.rs  desig.rs  desig.yaml  desig.yaml.bak  personer  personer2  rustdatabasen.rs  rustdatabasen_gtk_backup.rs
