[package]
name = "rustdatabasen"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
argon2 = "0.4"
eframe = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "rustdatabasen"
path = "rustdatabasen.rs"

[[bin]]
name = "aiagent_design"
path = "aiagent_design.rs"

[profile.dev]
opt-level = 0

